updated some of the colors, style.css still not working

--- a/mainmap/templates/style.css
+++ b/mainmap/templates/style.css
@@ -1,6 +1,9 @@
-p.accessible {
-    color:green;
-}
+nav.navbar{
+    background-color:#18435A;
+    }
+p.accessible{
+    color:#4F7C5E;
+    }
 p.not_accessible{
-    color:red;
-}
+    color:#BC4F00;
+    }
