--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -1,47 +1,106 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>NYC Accessible Streets</title>
-        <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-        <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
-        <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
-        <style>
-        body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; width: 100%; }
-        </style>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>NYC Accessible Streets</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'landing_map/style.css' %}">    
+    <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
+    <!-- Mapbox CDN-->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
+</head>
+<body>
+<!-- Load the `mapbox-gl-geocoder` plugin. -->
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
 
-    <body>
-    <!-- Load the `mapbox-gl-geocoder` plugin. -->
-    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
-    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-   
-    <div id="map"></div>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">NYC Accessible Streets</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Help</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <!-- <form action="/action_page.php">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search" name="search">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
 
-    <script>
-        mapboxgl.accessToken = '{{mapboxAccessToken}}';
-        const map = new mapboxgl.Map({
-            container: 'map',
-            // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
-            style: 'mapbox://styles/mapbox/streets-v11',
-            center: [-74, 40.67],
-            zoom: 11
-        });
+             <p>5 results </p>  -->
 
-        // Add the control to the map.
-        map.addControl(
-            new MapboxGeocoder({
-                accessToken: mapboxgl.accessToken,
-                mapboxgl: mapboxgl
-            }),
-            'top-left'
-        ); 
+            <div class="well well-lg">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star"></span> Star
+                </button>
+            </div>
+            <div class="well well-lg">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="accessible">1 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
+            <div class="well well-lg">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
+            <div class="well well-lg">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
+            <div class="well well-lg">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div id="map"></div>
+        </div>
+    </div>
+</div>
 
+<footer class="container-fluid text-center">
+    <p>NYC Accessible Streets</p>
+</footer>
 
-        map.addControl(new mapboxgl.FullscreenControl());
-        map.addControl(new mapboxgl.NavigationControl());
-    </script>
+<script>
+    mapboxgl.accessToken = '{{mapboxAccessToken}}';
+</script>
 
-    </body>
+<script src="{% static 'landing_map/maps.js' %} "></script>
+
+</body>
 </html>
