--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -1,25 +1,28 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <title>NYC Accessible Streets</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-    <!-- TODO: not picking up styling from style.css-->
-    <link rel="sylesheet" href="style.css">
-    <style>
-        nav.navbar{background-color:#18435A;}
-        p.accessible{color:#4F7C5E;}
-        p.not_accessible{color:#BC4F00;}
-    </style>
+    <link rel="stylesheet" href="{% static 'landing_map/style.css' %}">    
+    <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
+    <!-- Mapbox CDN-->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
 </head>
 <body>
+<!-- Load the `mapbox-gl-geocoder` plugin. -->
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
+
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">NYC Accessible Streets</a>
+            <a class="navbar-brand" href="/">NYC Accessible Streets</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Help</a></li>
@@ -31,7 +34,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
-            <form action="/action_page.php">
+            <!-- <form action="/action_page.php">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search" name="search">
                     <div class="input-group-btn">
@@ -40,7 +43,7 @@
                 </div>
             </form>
 
-            <p>5 results </p>
+             <p>5 results </p>  -->
 
             <div class="well well-lg">
                 <h4>street name & street name, XX corner</h4>
@@ -84,15 +87,20 @@
             </div>
         </div>
         <div class="col-md-8">
-            <h1>Map will go here</h1>
+            <div id="map"></div>
         </div>
     </div>
 </div>
 
-
-
 <footer class="container-fluid text-center">
     <p>NYC Accessible Streets</p>
 </footer>
+
+<script>
+    mapboxgl.accessToken = '{{mapboxAccessToken}}';
+</script>
+
+<script src="{% static 'landing_map/maps.js' %} "></script>
+
 </body>
 </html>
