--- a/static/landing_map/style.css
+++ b/static/landing_map/style.css
@@ -18,6 +18,10 @@ body{
     }
 */
 /* pin card styling */
+div.cards{
+    height:500px;
+    overflow-y: scroll
+}
 p.accessible{
     color:#4F7C5E;}
 p.not_accessible{
