login/signup additions

--- a/accounts/templates/accounts/newhome.html
+++ b/accounts/templates/accounts/newhome.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'landing_map/style.css' %}">    
+    <link rel="stylesheet" href="{% static 'landing_map/style.css' %}">
     <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
     <!-- Mapbox CDN-->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
@@ -26,7 +26,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Help</a></li>
-            <li><a href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </div>
@@ -34,13 +34,13 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
- 
+
             <div class="filter">
                 <p>5 results</p>
-                
+
                 <div class="dropdown">
                     <button type="button" class="btn btn-primary dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <span class="glyphicon glyphicon-filter"></span> 
+                        <span class="glyphicon glyphicon-filter"></span>
                         filter
                     </button>
 
@@ -52,7 +52,7 @@
                             </label>
                             <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                         </div>
-                        
+
 
                         <!-- infrastructure displayed -->
                         <p class="dropdown-item">displayed info</p>
@@ -74,7 +74,7 @@
                               raised sidewalks
                             </label>
                         </div>
-                        
+
                         <!-- status of infrastructure -->
                         <p class="dropdown-item">status</p>
                         <div class="form-check">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>
-        
+
             <div class = 'cards'>
                 <div class="well well-lg">
                     <h4>street name & street name, XX corner</h4>
@@ -139,7 +139,7 @@
                 </div>
             </div>
 
-            
+
 
         </div>
         <div class="col-md-8">
