login/signup additions

--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -27,7 +27,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li><a class = "nav-list" href="#">Help</a></li>
-            <li><a class = "nav-list" href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a class = "nav-list" href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a class = "nav-list" href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </div>
