--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -38,7 +38,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Help</a></li>
-            <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </div>
