Integrated DB with signup

--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -38,23 +38,24 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li><a class = "nav-list" href="#">Help</a></li>
-            <li><a class = "nav-list" href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a class = "nav-list" href="accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a class = "nav-list" href="accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </div>
 </nav>
 {% endif%}
 <div class="container-fluid">
-    <!-- side panel with search, filter, pin cards -->
-    <div class="col-md-4">
-        <div class="filter">
-            <p>5 results</p>
-
-            <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="glyphicon glyphicon-filter"></span>
-                    filter
-                </button>
+    <div class="row">
+        <div class="col-md-4">
+ 
+            <div class="filter">
+                <p>5 results</p>
+                
+                <div class="dropdown">
+                    <button type="button" class="btn btn-primary dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-filter"></span> 
+                        filter
+                    </button>
 
                 <div class="dropdown-menu">
 
