--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -25,8 +25,8 @@
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Help</a></li>
-            <li><a href="accounts/logout"> Log Out</a></li>
+            <li><a class = "nav-list" href="#">Help</a></li>
+            <li><a class = "nav-list" href="accounts/logout"> Log Out</a></li>
         </ul>
     </div>
 </nav>
