--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -18,8 +18,7 @@
 <!-- Load the `mapbox-gl-geocoder` plugin. -->
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-
-<!-- navigation bar -->
+{% if user.is_authenticated %}
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -27,22 +26,36 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
             <li><a class = "nav-list" href="#">Help</a></li>
-            <li><a class = "nav-list" href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a class = "nav-list" href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a class = "nav-list" href="accounts/logout"> Log Out</a></li>
         </ul>
     </div>
 </nav>
+{% else %}
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="nav-brand" href="/">NYC Accessible Streets</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a class = "nav-list" href="#">Help</a></li>
+            <li><a class = "nav-list" href="accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a class = "nav-list" href="accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+    </div>
+</nav>
+{% endif%}
 <div class="container-fluid">
-    <!-- side panel with search, filter, pin cards -->
-    <div class="col-md-4">
-        <div class="filter">
-            <p>5 results</p>
-
-            <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="glyphicon glyphicon-filter"></span>
-                    filter
-                </button>
+    <div class="row">
+        <div class="col-md-4">
+ 
+            <div class="filter">
+                <p>5 results</p>
+                
+                <div class="dropdown">
+                    <button type="button" class="btn btn-primary dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-filter"></span> 
+                        filter
+                    </button>
 
                 <div class="dropdown-menu">
 
