--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,7 +2,13 @@
 {% block content %}
 <br>
 <h2>Log In</h2>
-<br>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+    {% endfor %}
+</ul>
+{% endif %}
 <form method="POST" action="">
   {% csrf_token %}
   <div class="input-group mb-3">
@@ -16,7 +22,7 @@
       <span class="input-group-text"><i class="fas fa-key"></i></span>
     </div>
       <input type="password" name="password" placeholder="Password..." class="form-control" >
-  </div>
+    </div>
 
     <div class="d-flex justify-content-center mt-3 login_container">
        <input class="btn login_btn" type="submit" value="Login">
