--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -38,13 +38,18 @@
             {{form.password2}}
         </div>
         
+        {% if form.errors %}
+            {% for field in form %} 
+                <p>{{field.errors}}</p>
+            {% endfor %} 
+        {% endif %}
         <div class="gy-5">
             <div class="d-grid">
                 <button class="btn btn-lg btn-login fw-bold mb-2" type="submit">Sign Up</button>
             </div>
             
             <div class="text-secondary text-center small mt-3">
-                Already have an account? <a class="text-light-green" href="login.html}">Log In</a>
+                Already have an account? <a class="text-light-green" href="/accounts/login">Log In</a>
             </div>
         </div>
     </form>
