--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -15,12 +15,14 @@
     <div class="input-group-append">
       <span class="input-group-text"><i class="fas fa-user"></i></span>
     </div>
+    <p>username:</p>
     <input type="text" name="username" placeholder="Username..." class="form-control">
   </div>
   <div class="input-group mb-2">
     <div class="input-group-append">
       <span class="input-group-text"><i class="fas fa-key"></i></span>
     </div>
+    <p>password:</p>
       <input type="password" name="password" placeholder="Password..." class="form-control" >
     </div>
 
