--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -2,61 +2,274 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>NYC Accessible Streets</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
-  <!-- Mapbox CDN-->
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
+    <meta charset="utf-8">
+    <title>NYC Accessible Streets</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{% static 'landing_map/style.css' %}">    
+    <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
+    <!-- Mapbox CDN-->
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js"></script>
 </head>
-
 <body>
-
 <!-- Load the `mapbox-gl-geocoder` plugin. -->
 <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
-<link rel="stylesheet" href="{% static 'landing_map/style.css' %}">
-
-<!-- navigation bar -->
-{% include 'common/navbar.html' %}
-
+{% if user.is_authenticated %}
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="nav-brand" href="/">NYC Accessible Streets</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a class = "nav-list" href="#">Help</a></li>
+            <li><a class = "nav-list" href="accounts/logout"> Log Out</a></li>
+        </ul>
+    </div>
+</nav>
+{% else %}
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="nav-brand" href="/">NYC Accessible Streets</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a class = "nav-list" href="accounts/help">Help</a></li>
+            <li><a class = "nav-list" href="accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a class = "nav-list" href="accounts/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+    </div>
+</nav>
+{% endif%}
 <div class="container-fluid">
-      <div class="col-md-4">
-        <div class="row">
-          <div class="col-md-12">
-            <div id="geocoder" class="geocoder"></div>
-          </div>
+    <div class="row">
+        <div class="col-md-4">
+ 
+            <div class="filter">
+                <p>5 results</p>
+                
+                <div class="dropdown">
+                    <button type="button" class="btn btn-primary dropdown-toggle shadow-none" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-filter"></span> 
+                        filter
+                    </button>
+
+                <div class="dropdown-menu">
+
+                    <div class="form-check form-switch">
+                        <label class="form-check-label" id="fav" for="flexCheckDefault">
+                            Favorites only
+                        </label>
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                    </div>
+
+
+                    <!-- infrastructure displayed -->
+                    <p class="dropdown-item">displayed info</p>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            accessible ramps
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            accessible pedestrian signals
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            raised sidewalks
+                        </label>
+                    </div>
+
+                    <!-- status of infrastructure -->
+                    <p class="dropdown-item">status</p>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            currently accessible
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            currently inaccessible
+                        </label>
+                    </div>
+
+                    <button class="dropdown-item btn btn-light shadow-none" id="clear" type="button">Clear</button>
+                    <button class="dropdown-item btn btn-primary shadow-none" type="button">Apply Filter</button>
+                </div>
+            </div>
+        </div>
+        <!-- pin card detail modals-->
+        <!-- details modal 1 -->
+        <div id="pin_1_details" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">street name & street name, XX corner</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="accessible">2 accessible ramps</p>
+                        <p class="not_accessible">0 accessible signals</p>
+                        <p class="not_accessible">User reported signals not working at this intersection</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- details modal 2 -->
+        <div id="pin_2_details" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">street name & street name, XX corner</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="accessible">2 accessible ramps</p>
+                        <p class="accessible">1 accessible signals</p>
+                        <p class="accessible">No issues reported at this location</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- details modal 3 -->
+        <div id="pin_3_details" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">street name & street name, XX corner</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="accessible">2 accessible ramps</p>
+                        <p class="not_accessible">0 accessible signals</p>
+                        <p class="not_accessible">User reported signals not working at this intersection</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- details modal 4 -->
+        <div id="pin_4_details" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">street name & street name, XX corner</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="accessible">2 accessible ramps</p>
+                        <p class="not_accessible">0 accessible signals</p>
+                        <p class="not_accessible">User reported signals not working at this intersection</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- details modal 5 -->
+        <div id="pin_5_details" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">street name & street name, XX corner</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p class="accessible">2 accessible ramps</p>
+                        <p class="not_accessible">0 accessible signals</p>
+                        <p class="not_accessible">User reported signals not working at this intersection</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="row">
-          <div class="col-md-8">
-            {% include 'landing_map/filterButton.html' %}
-          </div>
-
-          <div class="col-md-4">
-            <p class="results">5 results</p>
-          </div>
+        <!-- Pin cards -->
+        <div class='cards'>
+            <!-- pin card 1 -->
+            <div class="well well-lg" data-toggle="modal" data-target="#pin_1_details">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star"></span> Star
+                </button>
+            </div>
+            <!-- pin card 2 -->
+            <div class="well well-lg" data-toggle="modal" data-target="#pin_2_details">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="accessible">1 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
+            <!-- pin card 3 -->
+            <div class="well well-lg" data-toggle="modal" data-target="#pin_3_details">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
+            <!-- pin card 4 -->
+            <div class="well well-lg" data-toggle="modal" data-target="#pin_4_details">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
+            <!-- pin card 5 -->
+            <div class="well well-lg" data-toggle="modal" data-target="#pin_5_details">
+                <h4>street name & street name, XX corner</h4>
+                <p class="accessible">2 accessible ramps</p>
+                <p class="not_accessible">0 accessible signals</p>
+                <button type="button" class="btn btn-default btn-sm">
+                    <span class="glyphicon glyphicon-star-empty"></span> Star
+                </button>
+            </div>
         </div>
+    </div>
 
-        <div class="row">
-          <div class="col-md-12">
-            {% include 'landing_map/cardDetails.html' %}
-          </div>
-        </div>
-
-      </div>
-
-      <!-- map -->
-      <div class="col-md-8">
+    <!-- map -->
+    <div class="col-md-8">
         <div id="map"></div>
-      </div>
+    </div>
+</div>
 </div>
 
-{% include 'common/copyright.html' %}
+<footer class="container-fluid text-center">
+    <p>NYC Accessible Streets</p>
+</footer>
 
 <script>
     mapboxgl.accessToken = '{{mapboxAccessToken}}';
