help page accessible while logged in

--- a/landing_map/templates/landing_map/home.html
+++ b/landing_map/templates/landing_map/home.html
@@ -25,7 +25,7 @@
             <a class="nav-brand" href="/">NYC Accessible Streets</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-            <li><a class = "nav-list" href="#">Help</a></li>
+            <li><a class = "nav-list" href="accounts/help">Help</a></li>
             <li><a class = "nav-list" href="accounts/logout"> Log Out</a></li>
         </ul>
     </div>
